# TcpC

./: CMakeLists.txt  Concept.txt  README.md
examples/: AppProtocol.h  MainClient.c  MainServer.c
include/: CommonDef.h  PacketUtils.h  SafeQueue.h  TcpClient.h  TcpServer.h
src/: PacketUtils.c  SafeQueue.c  TcpClient.c  TcpServer.c
